added popup on hover

--- a/description.html
+++ b/description.html
@@ -30,8 +30,14 @@
         <p>Liczba miejsc: do 180</p>
 
         <p>Lista pasażerów</p>
-        <ul>
-            <li>Franz Bertele</li>
+        <ul class="list">
+            <li class="passenger">Franz Bertele
+                <span class="popup-seat">Miejsce: 45a</span>
+            </li>
+            <li>Marcin Bronikowski</li>
+            <li>Marcin Bronikowski</li>
+            <li>Marcin Bronikowski</li>
+            <li>Marcin Bronikowski</li>
             <li>Marcin Bronikowski</li>
         </ul>
     </div>
